--- a/src/app/components/todos/list/list.component.html
+++ b/src/app/components/todos/list/list.component.html
@@ -6,7 +6,9 @@
     <input class="btn btn-sm btn-danger"
            *ngIf="!item.completed"
            type="button"
-           (click)="doIt()"
+           (click)="markComplete(item)"
            value="X">
+
+
   </li>
 </ul>
