--- a/src/app/components/counter/counter.component.html
+++ b/src/app/components/counter/counter.component.html
@@ -8,4 +8,8 @@
          (click)="increment()"
          class="btn btn-primary"
          value="+">
+  <input type="button"
+         (click)="reset()"
+         class="btn btn-primary"
+         value="reset">
 </div>
