added math game

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -29,4 +29,9 @@
        [routerLinkActive]="['active']"
        [routerLink]="['books']">Books</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link"
+       [routerLinkActive]="['active']"
+       [routerLink]="['mathgame']">MathGame</a>
+  </li>
 </ul>
