--- a/src/app/features/books/components/entry/entry.component.html
+++ b/src/app/features/books/components/entry/entry.component.html
@@ -16,9 +16,9 @@
     <select class="form-control"
             #type
             name="type">
-      <option value="1">Hardcover</option>
-      <option value="2">Paperback</option>
-      <option value="3">E-book</option>
+      <option value="Hardcover">Hardcover</option>
+      <option value="Paperback">Paperback</option>
+      <option value="E-book">E-book</option>
     </select>
   </div>
   <input type="button"
